# Career-Guide

./: .replit  README.md  app.py  main.py  pyproject.toml  requirements.txt  try.py
templates/: .studentHome.html.511049688~  adminHome.html  adminLogin.html  adminSignUp.html  bootstrap.html  footer.html  home.html  homeSections.html  mentor.html  nav.html  nav2.html  nav3.html  resumeReview.html  roughCode.html  schools.html  studentHome.html  studentLogin.html  studentSignUp.html
